update of jdk to version 17
- update of gradle to new version 8.4
- new dependency jobj-reflect in minor version 2.2
- modularization of the project